cmake_minimum_required(VERSION 3.9.1)
set(WIN_LIBRARIES ws2_32)
if(WIN32)
set(BOOST_LIBRARIES boost_atomic-vc141-mt-1_65_1
                    boost_chrono-vc141-mt-1_65_1
					boost_container-vc141-mt-1_65_1
					boost_context-vc141-mt-1_65_1
					boost_coroutine-vc141-mt-1_65_1
					boost_date_time-vc141-mt-1_65_1
					boost_fiber-vc141-mt-1_65_1
					boost_filesystem-vc141-mt-1_65_1
					boost_graph-vc141-mt-1_65_1
					boost_iostreams-vc141-mt-1_65_1
					boost_locale-vc141-mt-1_65_1
					boost_log_setup-vc141-mt-1_65_1
					boost_log-vc141-mt-1_65_1
					boost_math_c99f-vc141-mt-1_65_1
					boost_math_c99l-vc141-mt-1_65_1
					boost_math_c99-vc141-mt-1_65_1
					boost_math_tr1f-vc141-mt-1_65_1
					boost_math_tr1l-vc141-mt-1_65_1
					boost_math_tr1-vc141-mt-1_65_1
					boost_numpy3-vc141-mt-1_65_1
					boost_prg_exec_monitor-vc141-mt-1_65_1
					boost_program_options-vc141-mt-1_65_1
					boost_python3-vc141-mt-1_65_1
					boost_random-vc141-mt-1_65_1
					boost_regex-vc141-mt-1_65_1
					boost_serialization-vc141-mt-1_65_1
					boost_signals-vc141-mt-1_65_1
					boost_stacktrace_noop-vc141-mt-1_65_1
					boost_stacktrace_windbg_cached-vc141-mt-1_65_1
					boost_stacktrace_windbg-vc141-mt-1_65_1
					boost_system-vc141-mt-1_65_1
					boost_thread-vc141-mt-1_65_1
					boost_timer-vc141-mt-1_65_1
					boost_type_erasure-vc141-mt-1_65_1
					boost_unit_test_framework-vc141-mt-1_65_1
					boost_wave-vc141-mt-1_65_1
					boost_wserialization-vc141-mt-1_65_1)
set(GPERFTOOS_LIBRARIES libtcmalloc_minimal)
else()

set(BOOST_LIBRARIES boost_atomic-gcc-mt-1_65_1
                    boost_chrono-gcc-mt-1_65_1
					boost_container-gcc-mt-1_65_1
					boost_context-gcc-mt-1_65_1
					boost_coroutine-gcc-mt-1_65_1
					boost_date_time-gcc-mt-1_65_1
					boost_fiber-gcc-mt-1_65_1
					boost_filesystem-gcc-mt-1_65_1
					boost_graph-gcc-mt-1_65_1
					boost_iostreams-gcc-mt-1_65_1
					boost_locale-gcc-mt-1_65_1
					boost_log_setup-gcc-mt-1_65_1
					boost_log-gcc-mt-1_65_1
					boost_math_c99f-gcc-mt-1_65_1
					boost_math_c99l-gcc-mt-1_65_1
					boost_math_c99-gcc-mt-1_65_1
					boost_math_tr1f-gcc-mt-1_65_1
					boost_math_tr1l-gcc-mt-1_65_1
					boost_math_tr1-gcc-mt-1_65_1
					boost_prg_exec_monitor-gcc-mt-1_65_1
					boost_program_options-gcc-mt-1_65_1
					boost_python-gcc-mt-1_65_1
					boost_random-gcc-mt-1_65_1
					boost_regex-gcc-mt-1_65_1
					boost_serialization-gcc-mt-1_65_1
					boost_signals-gcc-mt-1_65_1
					boost_stacktrace_noop-gcc-mt-1_65_1
					boost_stacktrace_addr2line-gcc-mt-1_65_1
					boost_stacktrace_backtrace-gcc-mt-1_65_1
					boost_stacktrace_basic-gcc-mt-1_65_1
					boost_system-gcc-mt-1_65_1
					boost_thread-gcc-mt-1_65_1
					boost_timer-gcc-mt-1_65_1
					boost_type_erasure-gcc-mt-1_65_1
					boost_unit_test_framework-gcc-mt-1_65_1
					boost_wave-gcc-mt-1_65_1
					boost_wserialization-gcc-mt-1_65_1
					libtcmalloc_minimal)				
endif()
if(WIN32)
add_definitions(-D__WINDOWS__)
else()
add_definitions(-D__LINUX__)
endif()
add_subdirectory(Server)
